// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OAuth2 server with the client credentials flow should produce new tokens 2`] = `
{
  "authenticationCheckCalls": [
    [
      "basic",
      {
        "hash": "YWxpOm9wZW5fc2VzYW1l",
        "password": "open_sesame",
        "username": "ali",
      },
    ],
  ],
  "checkApplicationCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user",
        "type": "client_credentials",
      },
    ],
  ],
  "oAuth2AccessTokenCheckCalls": [],
  "oAuth2AccessTokenCreateCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user",
        "userId": "2",
      },
    ],
  ],
  "oAuth2CodeCheckCalls": [],
  "oAuth2CodeCreateCalls": [],
  "oAuth2PasswordCheckCalls": [],
  "oAuth2RefreshTokenCheckCalls": [],
  "oAuth2RefreshTokenCreateCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user",
        "userId": "2",
      },
    ],
  ],
}
`;

exports[`OAuth2 server with the code flow should build the authorization redirection 2`] = `
{
  "authenticationCheckCalls": [],
  "checkApplicationCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "redirectURI": "https://example.com/oauth2/callback?a_param=a_param_value",
        "scope": "user",
        "type": "code",
      },
    ],
  ],
  "oAuth2AccessTokenCheckCalls": [],
  "oAuth2AccessTokenCreateCalls": [],
  "oAuth2CodeCheckCalls": [],
  "oAuth2CodeCreateCalls": [],
  "oAuth2PasswordCheckCalls": [],
  "oAuth2RefreshTokenCheckCalls": [],
  "oAuth2RefreshTokenCreateCalls": [],
}
`;

exports[`OAuth2 server with the code flow should produce new tokens 2`] = `
{
  "authenticationCheckCalls": [
    [
      "basic",
      {
        "hash": "YWxpOm9wZW5fc2VzYW1l",
        "password": "open_sesame",
        "username": "ali",
      },
    ],
  ],
  "checkApplicationCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "",
        "type": "code",
      },
    ],
  ],
  "oAuth2AccessTokenCheckCalls": [],
  "oAuth2AccessTokenCreateCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "redirectURI": "http://redirect.example.com/yolo",
        "scope": "user,auth",
        "userId": "1",
      },
    ],
  ],
  "oAuth2CodeCheckCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      "a_grant_code",
      "http://redirect.example.com/yolo",
    ],
  ],
  "oAuth2CodeCreateCalls": [],
  "oAuth2PasswordCheckCalls": [],
  "oAuth2RefreshTokenCheckCalls": [],
  "oAuth2RefreshTokenCreateCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "redirectURI": "http://redirect.example.com/yolo",
        "scope": "user,auth",
        "userId": "1",
      },
    ],
  ],
}
`;

exports[`OAuth2 server with the code flow should redirect with a code 2`] = `
{
  "authenticationCheckCalls": [
    [
      "bearer",
      {
        "hash": "yolo",
      },
    ],
  ],
  "checkApplicationCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "",
        "type": "root",
      },
    ],
  ],
  "oAuth2AccessTokenCheckCalls": [],
  "oAuth2AccessTokenCreateCalls": [],
  "oAuth2CodeCheckCalls": [],
  "oAuth2CodeCreateCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user",
        "userId": "2",
      },
      "http://redirect.example.com/yolo?a_param=a_value",
      {},
    ],
  ],
  "oAuth2PasswordCheckCalls": [],
  "oAuth2RefreshTokenCheckCalls": [],
  "oAuth2RefreshTokenCreateCalls": [],
}
`;

exports[`OAuth2 server with the implicit flow should build the authorization redirection 2`] = `
{
  "authenticationCheckCalls": [],
  "checkApplicationCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "redirectURI": "http://redirect.example.com/yolo",
        "scope": "user",
        "type": "token",
      },
    ],
  ],
  "oAuth2AccessTokenCheckCalls": [],
  "oAuth2AccessTokenCreateCalls": [],
  "oAuth2CodeCheckCalls": [],
  "oAuth2CodeCreateCalls": [],
  "oAuth2PasswordCheckCalls": [],
  "oAuth2RefreshTokenCheckCalls": [],
  "oAuth2RefreshTokenCreateCalls": [],
}
`;

exports[`OAuth2 server with the implicit flow should redirect with a token 2`] = `
{
  "authenticationCheckCalls": [
    [
      "bearer",
      {
        "hash": "yolo",
      },
    ],
  ],
  "checkApplicationCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "",
        "type": "root",
      },
    ],
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "redirectURI": "http://redirect.example.com/yolo?a_param=a_value",
        "scope": "user",
        "type": "token",
      },
    ],
  ],
  "oAuth2AccessTokenCheckCalls": [],
  "oAuth2AccessTokenCreateCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user",
        "userId": "2",
      },
      {},
    ],
  ],
  "oAuth2CodeCheckCalls": [],
  "oAuth2CodeCreateCalls": [],
  "oAuth2PasswordCheckCalls": [],
  "oAuth2RefreshTokenCheckCalls": [],
  "oAuth2RefreshTokenCreateCalls": [],
}
`;

exports[`OAuth2 server with the password flow should produce new tokens 2`] = `
{
  "authenticationCheckCalls": [
    [
      "basic",
      {
        "hash": "YWxpOm9wZW5fc2VzYW1l",
        "password": "open_sesame",
        "username": "ali",
      },
    ],
  ],
  "checkApplicationCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user",
        "type": "password",
      },
    ],
  ],
  "oAuth2AccessTokenCheckCalls": [],
  "oAuth2AccessTokenCreateCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,auth",
        "userId": "1",
      },
    ],
  ],
  "oAuth2CodeCheckCalls": [],
  "oAuth2CodeCreateCalls": [],
  "oAuth2PasswordCheckCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      "me@example.com",
      "udelawli",
      "user",
    ],
  ],
  "oAuth2RefreshTokenCheckCalls": [],
  "oAuth2RefreshTokenCreateCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,auth",
        "userId": "1",
      },
    ],
  ],
}
`;

exports[`OAuth2 server with the refresh token flow should produce new tokens 2`] = `
{
  "authenticationCheckCalls": [
    [
      "basic",
      {
        "hash": "YWxpOm9wZW5fc2VzYW1l",
        "password": "open_sesame",
        "username": "ali",
      },
    ],
  ],
  "checkApplicationCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user",
        "type": "refresh",
      },
    ],
  ],
  "oAuth2AccessTokenCheckCalls": [],
  "oAuth2AccessTokenCreateCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,auth",
        "userId": "1",
      },
    ],
  ],
  "oAuth2CodeCheckCalls": [],
  "oAuth2CodeCreateCalls": [],
  "oAuth2PasswordCheckCalls": [],
  "oAuth2RefreshTokenCheckCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      "a_refresh_token",
      "user",
    ],
  ],
  "oAuth2RefreshTokenCreateCalls": [
    [
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,oauth",
        "userId": "2",
      },
      {
        "applicationId": "acdc41ce-acdc-41ce-acdc-41ceacdc41ce",
        "scope": "user,auth",
        "userId": "1",
      },
    ],
  ],
}
`;
